# DeepMidi

./: .gitignore  final.midi  main.py  setup.sh
deepmidi/: definitions.py
deepmidi/data/: batchify.py  decode.py  encode.py
encoding/: CMakeLists.txt  TODO.txt
encoding/include/: MidiDecoder.h  MidiEncoder.h  decoder.h  encoder.h
encoding/src/: MidiDecoder.cpp  MidiEncoder.cpp  backup.cpp  decoder.cpp  encoder.cpp  main.cpp
src/data/: encode.py
